--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 * {
     font-family: 'Quicksand', sans-serif;
-    // border: 1px solid red;
 }
+
 html, body {
     margin: 0;
     padding: 0;
@@ -11,6 +11,7 @@ html, body {
     text-align: center;
     background-color: #E9DAC1;
 }
+
 .main {
     background-color: #F7ECDE;
     border-radius: 40px;
@@ -20,10 +21,12 @@ html, body {
     height: 80%;
     margin: 10px 40px 5px 40px;
 }
+
 h1 {
     font-family: 'Pacifico', cursive;
     margin-top: 0;
 }
+
 .content {
     display: flex;
     justify-content: center;
@@ -52,47 +55,50 @@ h1 {
 
         button {
             cursor: pointer;
-            //TODO add more shadow unclicked and no shadow when clicked
             background-color: #9ED2C6;
             border: 2px solid transparent;
-            box-shadow: 3px 3px #aae1d4;
+            box-shadow: 3px 3px #7aa097;
             border-radius: 5px;
             width: 70px;
             height: 70px;
+            }
 
-            &:active {
-                box-shadow: none;
-                transform: scale(0.9);
+            .clicked-button {
+                background-color: #66a597;
+                box-shadow: inset 0px 0px 2px;
             }
         }
+
         .hover:hover {
             box-shadow: none;
-            background-color: #65ceb5;
+            background-color: #66a597;
             transform: scale(1.1);
             font-weight: bold;
-        }
-        .clicked-button {
-            background-color: #65ceb5;
-            box-shadow: inset 0px 0px 5px;
-            // border: 2px solid #378281;
+
+            &:active {
+                box-shadow: inset 0px 0px 2px;
+                transform: scale(1);
         }
     }
 }
+
 .draw-area {
     background-color: #9ED2C6;
     border-radius: 40px;
     padding: 5px 40px 40px 40px;
 }
+
 .container {
     display: grid;
     width: 400px;
     height: 400px;
 
     .cell {
-        background-color: #F7ECDE;
+        background-color: rgb(247, 236, 222);
         border: 1px solid rgba(220, 220, 220, 0.3);
     }
 }
+
 footer {
     display: flex;
     justify-content: center;
@@ -118,6 +124,7 @@ footer {
     0% {transform: rotate(0);}
     100% {transform: rotate(359deg);}
 }
+
 
 
 
